src/objects/ADvendio__EnhancedVisitReport__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Click on the lookup wizard to add an agency.</description>
        <inlineHelpText>Click on the lookup wizard to add an agency.</inlineHelpText>
        <label>Agency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Account - Client</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>EnhancedVisitReports2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__BCC__c</fullName>
        <description>Enter the contact or user who shall receive a blind copy of this visit report.</description>
        <inlineHelpText>Enter the contact or user who shall receive a blind copy of this visit report.</inlineHelpText>
        <label>BCC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__CC__c</fullName>
        <description>Enter the contact or user who shall receive a copy of this visit report.</description>
        <inlineHelpText>Enter the contact or user who shall receive a copy of this visit report.</inlineHelpText>
        <label>CC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Contact_Person_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter your primary contact person at the agency.</description>
        <inlineHelpText>Enter your primary contact person at the agency.</inlineHelpText>
        <label>Contact Person Agency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.ADvendio__Agency__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Visit Reports (Contact Person Agency)</relationshipLabel>
        <relationshipName>ContactPersonAgency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Contact_Person_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter your primary contact person at your customer.</description>
        <inlineHelpText>Enter your primary contact person at your customer.</inlineHelpText>
        <label>Contact Person Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.ADvendio__Customer__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Visit Reports (Contact Person Customer)</relationshipLabel>
        <relationshipName>ContactPersonCustomer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Click on the lookup wizard to add the customer.</description>
        <inlineHelpText>Click on the lookup wizard to add the customer.</inlineHelpText>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Account - Agency</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>EnhancedVisitReports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ADvendio__DurationMin__c</fullName>
        <label>Duration (min)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Event__c</fullName>
        <label>Event</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter the name on whose behalf this visit report shall be created.</description>
        <inlineHelpText>Enter the name on whose behalf this visit report shall be created.</inlineHelpText>
        <label>From</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Froms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__NextSteps__c</fullName>
        <label>Next steps</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Create an offer</fullName>
                </value>
                <value>
                    <fullName>Optimise campaign</fullName>
                </value>
                <value>
                    <fullName>Set a due date</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Information to a colleague</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Other__c</fullName>
        <description>Enter additional information.</description>
        <inlineHelpText>Enter additional information.</inlineHelpText>
        <label>Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Publisher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>With this reference on the account, you can select the marketer.</description>
        <inlineHelpText>With this reference on the account, you can select the marketer.</inlineHelpText>
        <label>Publisher</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>EnhancedVisitReports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__ReasonOfReport__c</fullName>
        <label>Reason of report</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer care</fullName>
                </value>
                <value>
                    <fullName>Potential analysis</fullName>
                </value>
                <value>
                    <fullName>Portfolio presentation</fullName>
                </value>
                <value>
                    <fullName>Portfolio presentation premium</fullName>
                </value>
                <value>
                    <fullName>Presentation of campaigns</fullName>
                </value>
                <value>
                    <fullName>Discussion of campaigns</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Road-Show</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Planning of the next quarter, year, fiscal year, campaign</fullName>
                </value>
                <value>
                    <fullName>new marketing goals, upcoming campaigns</fullName>
                </value>
                <value>
                    <fullName>Presentation of special promotion</fullName>
                </value>
                <value>
                    <fullName>annual appraisal</fullName>
                </value>
                <value>
                    <fullName>Briefing</fullName>
                </value>
                <value>
                    <fullName>new dialogue partner</fullName>
                </value>
                <value>
                    <fullName>renewal at clients/Agents</fullName>
                </value>
                <value>
                    <fullName>Visit</fullName>
                </value>
                <value>
                    <fullName>activity</fullName>
                </value>
                <value>
                    <fullName>Exhibition visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Recipient_Names__c</fullName>
        <description>This field displays the names of the recipients.</description>
        <inlineHelpText>This field displays the names of the recipients.</inlineHelpText>
        <label>Recipient Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Recipients__c</fullName>
        <description>In this field, the recipients&apos; e-mail adresses will be saved.</description>
        <inlineHelpText>In this field, the recipients&apos; e-mail adresses will be saved.</inlineHelpText>
        <label>Recipients</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Reference_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>With this reference you can link the visit report to a media campaign.</description>
        <inlineHelpText>With this reference you can link the visit report to a media campaign.</inlineHelpText>
        <label>Reference to</label>
        <referenceTo>ADvendio__MediaCampaign__c</referenceTo>
        <relationshipName>MediaCampaign</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>With this reference you can link the visit report to a site.</description>
        <inlineHelpText>With this reference you can link the visit report to a site.</inlineHelpText>
        <label>Site</label>
        <referenceTo>ADvendio__Site__c</referenceTo>
        <relationshipName>EnhancedVisitReports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Text__c</fullName>
        <description>Enter the text of the visit report.</description>
        <inlineHelpText>Enter the text of the visit report.</inlineHelpText>
        <label>Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ADvendio__To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Here you can enter a relation to a contact.</description>
        <inlineHelpText>Here you can enter a relation to a contact.</inlineHelpText>
        <label>To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Topic__c</fullName>
        <description>Enter the topic discussed during the visit.</description>
        <inlineHelpText>Enter the topic discussed during the visit.</inlineHelpText>
        <label>Topic</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__VisitReportTextTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Choose a template.</description>
        <inlineHelpText>Choose a template.</inlineHelpText>
        <label>VisitReportTextTemplate</label>
        <referenceTo>ADvendio__VisitReportTextTemplate__c</referenceTo>
        <relationshipName>EnhancedVisitReports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Visit Report</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Agency__c</columns>
        <columns>ADvendio__Customer__c</columns>
        <columns>ADvendio__Topic__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Visit Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visit Reports</pluralLabel>
    <recordTypes>
        <fullName>ADvendio__Sent</fullName>
        <active>true</active>
        <description>The VisitReport was already sent to someone.</description>
        <label>Sent</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__Template</fullName>
        <active>true</active>
        <label>Template</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>